# nrf_google_iot_core

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  prj.conf  spm.conf
include/: cJSON.h  gcloud.h  globalsign.inc
src/: cJSON.c  gcloud.c  main.c
src/env_sensors/: bsec.c  env_sensors.c  env_sensors.h
src/private_info/: create_keys.py  create_keys.sh
src/private_info_old/mansion-house-test0/: .gitignore
src/watchdog/: watchdog.c
